--- a/Image_Classifier_Project_v2.ipynb
+++ b/Image_Classifier_Project_v2.ipynb
@@ -148,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -156,69 +158,31 @@
      "text": [
       "/opt/conda/lib/python3.6/site-packages/torchvision-0.2.1-py3.6.egg/torchvision/models/densenet.py:212: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
       "Downloading: \"https://download.pytorch.org/models/densenet121-a639ec97.pth\" to /root/.torch/models/densenet121-a639ec97.pth\n",
-      "100%|██████████| 32342954/32342954 [00:01<00:00, 22057585.70it/s]\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "cuda runtime error (59) : device-side assert triggered at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCTensorMath.cu:26",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-992e8d7d35a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m     91\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \"\"\"\n\u001b[0;32m---> 93\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/lib/python3.6/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     87\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     88\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: cuda runtime error (59) : device-side assert triggered at /opt/conda/conda-bld/pytorch_1524584710464/work/aten/src/THC/generic/THCTensorMath.cu:26"
+      "100%|██████████| 32342954/32342954 [00:01<00:00, 24381233.10it/s]\n"
      ]
     }
    ],
    "source": [
+    "# model = models.vgg16(pretrained=True)\n",
     "model = models.densenet121(pretrained=True)\n",
     "\n",
     "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
     "\n",
     "from collections import OrderedDict\n",
+    "\n",
     "classifier = nn.Sequential(OrderedDict([\n",
-    "                          ('fc1', nn.Linear(1024, 500)),\n",
+    "                          ('fc1', nn.Linear(1024, 512)),\n",
     "                          ('relu', nn.ReLU()),\n",
-    "                          ('fc2', nn.Linear(500, 2)),\n",
+    "                          ('drop', nn.Dropout(p=0.5)),\n",
+    "                          ('fc2', nn.Linear(512, 102)),\n",
     "                          ('output', nn.LogSoftmax(dim=1))\n",
     "                          ]))\n",
-    "    \n",
+    "\n",
     "model.classifier = classifier\n",
     "\n",
     "criterion = nn.NLLLoss()\n",
-    "optimizer = optim.Adam(model.classifier.parameters(), lr=0.001)\n",
-    "\n",
-    "epochs = 3\n",
-    "print_every = 20\n",
-    "steps = 0\n",
-    "\n",
-    "model.to('cuda')\n",
-    "\n",
-    "for e in range(epochs):\n",
-    "    running_loss = 0\n",
-    "    for ii, (inputs, labels) in enumerate(trainloader):\n",
-    "        steps += 1\n",
-    "        \n",
-    "        inputs, labels = inputs.to('cuda'), labels.to('cuda')\n",
-    "        \n",
-    "        optimizer.zero_grad()\n",
-    "        \n",
-    "        outputs = model.forward(inputs)\n",
-    "        loss = criterion(outputs, labels)\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        running_loss += loss.item()\n",
-    "        \n",
-    "        if steps % print_every == 0:\n",
-    "            print(\"Epoch: {}/{}\".format(e+1, epochs),\n",
-    "                  \"Loss: {:.4f}\".format(running_loss/print_every))\n",
-    "            \n",
-    "            running_loss = 0"
+    "optimizer = optim.Adam(model.classifier.parameters(), lr=0.001)\n"
    ]
   },
   {
@@ -232,12 +196,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/8 Loss: 4.4672\n",
+      "Epoch: 1/8 Loss: 4.2795\n",
+      "Epoch: 1/8 Loss: 3.8024\n",
+      "Epoch: 1/8 Loss: 3.2509\n",
+      "Epoch: 1/8 Loss: 2.9028\n",
+      "Epoch: 2/8 Loss: 2.0040\n",
+      "Epoch: 2/8 Loss: 2.1474\n",
+      "Epoch: 2/8 Loss: 1.9419\n",
+      "Epoch: 2/8 Loss: 1.8739\n",
+      "Epoch: 2/8 Loss: 1.7265\n",
+      "Epoch: 3/8 Loss: 0.9792\n",
+      "Epoch: 3/8 Loss: 1.4990\n",
+      "Epoch: 3/8 Loss: 1.3885\n",
+      "Epoch: 3/8 Loss: 1.3049\n",
+      "Epoch: 3/8 Loss: 1.2954\n",
+      "Epoch: 4/8 Loss: 0.6165\n",
+      "Epoch: 4/8 Loss: 1.1632\n",
+      "Epoch: 4/8 Loss: 1.1441\n",
+      "Epoch: 4/8 Loss: 1.2004\n",
+      "Epoch: 4/8 Loss: 1.1067\n",
+      "Epoch: 5/8 Loss: 0.4099\n",
+      "Epoch: 5/8 Loss: 0.9889\n",
+      "Epoch: 5/8 Loss: 1.0022\n",
+      "Epoch: 5/8 Loss: 1.0125\n",
+      "Epoch: 5/8 Loss: 0.9897\n",
+      "Epoch: 6/8 Loss: 0.2296\n",
+      "Epoch: 6/8 Loss: 0.9848\n",
+      "Epoch: 6/8 Loss: 0.9398\n",
+      "Epoch: 6/8 Loss: 0.8830\n",
+      "Epoch: 6/8 Loss: 0.8553\n",
+      "Epoch: 7/8 Loss: 0.0896\n",
+      "Epoch: 7/8 Loss: 0.8511\n",
+      "Epoch: 7/8 Loss: 0.8163\n",
+      "Epoch: 7/8 Loss: 0.8538\n",
+      "Epoch: 7/8 Loss: 0.8322\n",
+      "Epoch: 7/8 Loss: 0.8113\n",
+      "Epoch: 8/8 Loss: 0.7898\n",
+      "Epoch: 8/8 Loss: 0.7018\n",
+      "Epoch: 8/8 Loss: 0.7560\n",
+      "Epoch: 8/8 Loss: 0.7926\n",
+      "Epoch: 8/8 Loss: 0.8214\n",
+      "trained\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Do validation on the test set"
+    "epochs = 8\n",
+    "print_every = 20\n",
+    "steps = 0\n",
+    "\n",
+    "\n",
+    "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
+    "    \n",
+    "model.to(device)\n",
+    "\n",
+    "for e in range(epochs):\n",
+    "    running_loss = 0\n",
+    "    for ii, (inputs, labels) in enumerate(trainloader):\n",
+    "        steps += 1\n",
+    "        \n",
+    "        inputs = inputs.to(device)\n",
+    "        \n",
+    "        labels = labels.to(device)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        outputs = model.forward(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        running_loss += loss.item()\n",
+    "        \n",
+    "        if steps % print_every == 0:\n",
+    "            print(\"Epoch: {}/{}\".format(e+1, epochs),\n",
+    "                  \"Loss: {:.4f}\".format(running_loss/print_every))\n",
+    "            \n",
+    "            running_loss = 0\n",
+    "            \n",
+    "            running_loss += loss.item()\n",
+    "\n",
+    "print('trained')\n",
+    "\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "with torch.no_grad():\n",
+    "    for data in testloader:\n",
+    "        images, targets = data\n",
+    "        images = images.to(device)\n",
+    "        targets = targets.to(device)\n",
+    "        outputs = model(images)\n",
+    "        _, predicted = torch.max(outputs.data, 1)\n",
+    "        total += targets.size(0)\n",
+    "        correct += (predicted == targets).sum().item()\n",
+    "\n",
+    "print('Accuracy of the network on the 10000 test images: %d %%' % (100 * correct / total))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of the network on the 10000 test images: 43 %\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -254,11 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Save the checkpoint "
+    "# TODO: Save the checkpoint \n",
+    "model.class_to_idx = train_data.class_to_idx\n",
+    "\n",
+    "checkpoint = {\n",
+    "    'input_size': 1024,\n",
+    "    'output_size': 102,\n",
+    "    'class_to_idx': model.class_to_idx,\n",
+    "    'hidden_layers': [512, 102],\n",
+    "    'state_dict': model.state_dict()\n",
+    "}\n",
+    "\n",
+    "torch.save(checkpoint, 'checkpoint.pth')"
    ]
   },
   {
@@ -276,7 +364,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Write a function that loads a checkpoint and rebuilds the model"
+    "# TODO: Write a function that loads a checkpoint and rebuilds the model\n",
+    "def load_checkpoint(filepath):\n",
+    "    checkpoint = torch.load(filepath)\n",
+    "    model = fc_model.Network(checkpoint['input_size'],\n",
+    "                             checkpoint['output_size'],\n",
+    "                             checkpoint['hidden_layers'], \n",
+    "                             checkpoint['class_to_inx'])\n",
+    "    \n",
+    "    model.load_state_dict(checkpoint['state_dict'])\n",
+    "    \n",
+    "    return model"
    ]
   },
   {
